[gd_scene load_steps=6 format=3 uid="uid://1d0ymxaid0iw"]

[ext_resource type="PackedScene" uid="uid://c6hyolq84ehxa" path="res://Utility/entity_hit.tscn" id="1_6misi"]
[ext_resource type="Script" path="res://Player/Attacks/Javelin/javelin.gd" id="2_rb6uc"]
[ext_resource type="Texture2D" uid="uid://bgbvmjnbit8my" path="res://Player/Attacks/Javelin/Textures/javelin_3_new.png" id="3_pmfb4"]
[ext_resource type="AudioStream" uid="uid://c68ep0ocvcs2u" path="res://Player/Attacks/Javelin/SoundEffects/woosh.wav" id="3_y0efa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4g7jw"]
size = Vector2(5.657, 38.184)

[node name="Javelin" instance=ExtResource("1_6misi")]
light_mask = 4
script = ExtResource("2_rb6uc")

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("3_pmfb4")

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(1, 1)
rotation = -0.785398
shape = SubResource("RectangleShape2D_4g7jw")

[node name="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource("3_y0efa")

[node name="AttackTimer" type="Timer" parent="." index="4"]
wait_time = 4.0
one_shot = true
autostart = true

[node name="ChangeDirectionTimer" type="Timer" parent="." index="5"]

[node name="ResetPositionTimer" type="Timer" parent="." index="6"]
wait_time = 3.0
autostart = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_change_direction_timer_timeout"]
[connection signal="timeout" from="ResetPositionTimer" to="." method="_on_reset_position_timer_timeout"]
